# agentflow-ai

./: .env.example  .gitignore  docker-compose.yml
backend/: .coverage  .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 40ff991fa2a6_create_initial_backend_tables.py  5d0b4c2a7e91_add_release_run_slack_alerts.py  7c3f2a1b9e4d_add_release_run_approvals.py  808eea38fb4f_add_engineering_document_chunk_.py  dbb3d55a9914_add_release_run_risk_snapshots.py
backend/app/: main.py
backend/app/api/: exception_handlers.py  router.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  session.py  vector_type.py
backend/app/integrations/: anthropic_client.py  anthropic_dynamic_synthesis_client.py  anthropic_execution_planner_client.py  github_client.py  jira_client.py  slack_client.py
backend/app/middleware/: request_body_limit.py  request_context.py  security_headers.py
backend/app/models/: __init__.py  engineering_document.py  engineering_document_chunk.py  release_run.py  release_run_approval.py  release_run_event.py  release_run_risk_snapshot.py  release_run_slack_alert.py
backend/app/observability/: __init__.py  tracing.py
backend/app/repositories/: engineering_document_repository.py  release_run_approval_repository.py  release_run_event_repository.py  release_run_repository.py  release_run_risk_snapshot_repository.py  release_run_slack_alert_repository.py
backend/app/schemas/: __init__.py  agent_dynamic_query.py  agent_dynamic_synthesis.py  agent_execution_plan.py  agent_execution_result.py  agent_query.py  agent_tool.py  agent_tool_arguments.py  engineering_document.py  error.py  github.py  health.py  jira.py  llm_risk_synthesis.py  release_run.py  release_run_approval.py  release_run_event.py  risk.py  risk_enums.py
backend/app/services/: agent_action_response_composer.py  agent_current_risk_response_composer.py  agent_dynamic_evaluation_service.py  agent_dynamic_execution_service.py  agent_dynamic_query_service.py  agent_dynamic_synthesis_citation_verifier.py  agent_dynamic_synthesis_evidence_index.py  agent_dynamic_synthesis_groundedness_evaluation_service.py  agent_dynamic_synthesis_prompt.py  agent_dynamic_synthesis_service.py  agent_execution_plan_validator.py  agent_execution_planner_prompt.py  agent_execution_planner_service.py  agent_github_pr_resolver.py  agent_historical_response_composer.py  agent_jira_ticket_resolver.py  agent_knowledge_response_composer.py  agent_llm_cost_estimator.py  agent_llm_cost_policy.py  agent_query_context_resolver.py  agent_query_executor.py  agent_query_router.py  agent_read_only_tool_adapters.py  agent_response_composer.py  agent_risk_filter.py  agent_similar_release_matcher.py  agent_specific_risk_matcher.py  agent_status_response_composer.py  agent_tool_registry.py  document_chunker.py  engineering_document_embedding_provider.py  engineering_document_ingestion_service.py  engineering_document_reranker.py  engineering_document_retrieval_service.py  github_risk_collector.py  github_risk_rules.py  github_risk_summary.py  hitl_approval_decision_service.py  jira_risk_collector.py  jira_risk_rules.py  (+18 more)
backend/app/workflows/: release_risk_graph.py  release_risk_nodes.py  release_risk_runner.py  release_risk_service_graph.py  release_risk_service_nodes.py  release_risk_service_runner.py  release_risk_state.py
backend/data/engineering_documents/: payment-service-runbook.md  release-readiness-checklist.md
backend/docs/: opentelemetry_observability.md
backend/scripts/: __init__.py  ingest_engineering_documents.py
backend/tests/: __init__.py  conftest.py  test_agent_dynamic_query_schema.py  test_agent_dynamic_synthesis_schema.py  test_agent_execution_plan_schema.py  test_agent_execution_result_schema.py  test_agent_tool_arguments_schema.py  test_agent_tool_schema.py  test_anthropic_client.py  test_anthropic_dynamic_synthesis_client.py  test_anthropic_execution_planner_client.py  test_db_session.py  test_dependency_wiring.py  test_exception_handlers.py  test_github_client.py  test_github_schema.py  test_jira_client.py  test_jira_risk_collector.py  test_jira_risk_rules.py  test_jira_risk_summary.py  test_jira_schema.py  test_llm_risk_synthesis_schema.py  test_logging.py  test_release_risk_summary.py  test_release_run_model.py  test_release_run_schema.py  test_release_run_service.py  test_request_context.py  test_risk_schema.py  test_slack_client.py
backend/tests/api/: test_engineering_documents_api.py  test_http_boundary.py  test_route_authorization.py  test_security_dependencies.py
backend/tests/core/: test_config.py  test_security.py
backend/tests/fixtures/: agent_dynamic_eval_cases.py  knowledge_retrieval_eval_cases.py  release_risk_synthesis_evidence.py
backend/tests/integration/: github_client.py  test_agent_queries_api.py  test_release_risk_audit_workflow_api.py  test_release_run_approvals_api.py  test_release_run_events_api.py  test_release_runs_api.py
backend/tests/observability/: test_business_span_wiring.py  test_logging_trace_context.py  test_request_context_span_attributes.py  test_safe_span_attributes.py  test_tracing.py
backend/tests/repositories/: test_engineering_document_repository.py  test_release_run_approval_repository.py  test_release_run_event_repository.py  test_release_run_repository.py  test_release_run_risk_snapshot_repository.py  test_release_run_slack_alert_repository.py
backend/tests/services/: test_agent_dynamic_evaluation_service.py  test_agent_dynamic_execution_service.py  test_agent_dynamic_quality_gate.py  test_agent_dynamic_query_service.py  test_agent_dynamic_synthesis_citation_verifier.py  test_agent_dynamic_synthesis_evidence_index.py  test_agent_dynamic_synthesis_groundedness_evaluation_service.py  test_agent_dynamic_synthesis_groundedness_quality_gate.py  test_agent_dynamic_synthesis_prompt.py  test_agent_dynamic_synthesis_service.py  test_agent_execution_plan_validator.py  test_agent_execution_planner_prompt.py  test_agent_execution_planner_service.py  (+42 more)
(+18 files in other folders)
